fix align in about-me p

--- a/src/scss/main-blocks/about-me.scss
+++ b/src/scss/main-blocks/about-me.scss
@@ -1,7 +1,7 @@
 @import "../main-classes";
 @import "../mixins/mixins";
 
-.about-me-photo{
+.about-me-photo {
   border-bottom: none;
 }
 
@@ -36,10 +36,12 @@
 
     @media screen and (min-width: 768px) and (max-width: 1200px) {
       margin: 0 30px;
+      text-align: center;
     }
 
     @media screen and (min-width: 320px) and (max-width: 768px) {
       margin: 0 20px;
+      text-align: center;
     }
   }
 
